--- a/requirements.txt
+++ b/requirements.txt
@@ -1,149 +1,101 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-altair=4.2.2=pypi_0
-ansi2html=1.8.0=pypi_0
-attrs=22.2.0=pypi_0
-biopython=1.80=pypi_0
-blinker=1.5=pypi_0
-bzip2=1.0.8=h7f98852_4
-ca-certificates=2022.12.7=ha878542_0
-cachetools=5.3.0=pypi_0
-cairo=1.16.0=ha61ee94_1014
-certifi=2022.12.7=pypi_0
-charset-normalizer=3.0.1=pypi_0
-click=8.1.3=pypi_0
-colour=0.1.5=pypi_0
-contourpy=1.0.7=pypi_0
-cycler=0.11.0=pypi_0
-dash=2.13.0=pypi_0
-dash-bio=1.0.1=pypi_0
-dash-bootstrap-components=1.5.0=pypi_0
-dash-core-components=2.0.0=pypi_0
-dash-daq=0.5.0=pypi_0
-dash-html-components=2.0.0=pypi_0
-dash-table=5.0.0=pypi_0
-decorator=5.1.1=pypi_0
-docopt=0.6.2=pypi_0
-entrypoints=0.4=pypi_0
-et-xmlfile=1.1.0=pypi_0
-expat=2.5.0=h27087fc_0
-flask=2.2.2=pypi_0
-font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-font-ttf-inconsolata=3.000=h77eed37_0
-font-ttf-source-code-pro=2.038=h77eed37_0
-font-ttf-ubuntu=0.83=hab24e00_0
-fontconfig=2.14.2=h14ed4e7_0
-fonts-conda-ecosystem=1=0
-fonts-conda-forge=1=0
-fonttools=4.38.0=pypi_0
-freetype=2.12.1=hca18f0e_1
-geoparse=2.0.3=pypi_0
-gettext=0.21.1=h27087fc_0
-gitdb=4.0.10=pypi_0
-gitpython=3.1.30=pypi_0
-gunicorn=21.2.0=pypi_0
-icu=70.1=h27087fc_0
-idna=3.4=pypi_0
-importlib-metadata=6.0.0=pypi_0
-importlib-resources=5.12.0=pypi_0
-itsdangerous=2.1.2=pypi_0
-jinja2=3.1.2=pypi_0
-joblib=1.2.0=pypi_0
-jsonschema=4.17.3=pypi_0
-kiwisolver=1.4.4=pypi_0
-ld_impl_linux-64=2.40=h41732ed_0
-libffi=3.4.2=h7f98852_5
-libgcc-ng=12.2.0=h65d4601_19
-libglib=2.74.1=h606061b_1
-libgomp=12.2.0=h65d4601_19
-libiconv=1.17=h166bdaf_0
-libnsl=2.0.0=h7f98852_0
-libpng=1.6.39=h753d276_0
-libsqlite=3.40.0=h753d276_0
-libstdcxx-ng=12.2.0=h46fd767_19
-libuuid=2.32.1=h7f98852_1000
-libxcb=1.13=h7f98852_1004
-libxml2=2.10.3=h7463322_0
-libzlib=1.2.13=h166bdaf_4
-markdown-it-py=2.1.0=pypi_0
-markupsafe=2.1.2=pypi_0
-matplotlib=3.7.0=pypi_0
-mdurl=0.1.2=pypi_0
-ncurses=6.3=h27087fc_1
-nest-asyncio=1.5.8=pypi_0
-numpy=1.24.1=pypi_0
-openbabel=3.1.1=py39h80c93ca_5
-openpyxl=3.1.2=pypi_0
-openssl=3.0.8=h0b41bf4_0
-packaging=23.0=pypi_0
-pandas=1.5.3=pypi_0
-parmed=4.0.0=pypi_0
-pcre2=10.40=hc3806b6_0
-periodictable=1.6.1=pypi_0
-pillow=9.4.0=pypi_0
-pip=23.0=pyhd8ed1ab_0
-pipreqs=0.4.13=pypi_0
-pixman=0.40.0=h36c2ea0_0
-plotly=5.13.0=pypi_0
-protobuf=3.20.3=pypi_0
-pthread-stubs=0.4=h36c2ea0_1001
-pyarrow=11.0.0=pypi_0
-pydeck=0.8.0=pypi_0
-pygments=2.14.0=pypi_0
-pympler=1.0.1=pypi_0
-pyparsing=3.0.9=pypi_0
-pyrsistent=0.19.3=pypi_0
-python=3.9.16=h2782a2a_0_cpython
-python-dateutil=2.8.2=pypi_0
-python_abi=3.9=3_cp39
-pytz=2022.7.1=pypi_0
-pytz-deprecation-shim=0.1.0.post0=pypi_0
-rdkit=2022.9.4=pypi_0
-readline=8.1.2=h0f457ee_0
-requests=2.28.2=pypi_0
-retrying=1.3.4=pypi_0
-rich=13.3.1=pypi_0
-scikit-learn=1.2.1=pypi_0
-scipy=1.10.0=pypi_0
-semver=2.13.0=pypi_0
-setuptools=67.1.0=pyhd8ed1ab_0
-six=1.16.0=pypi_0
-sklearn=0.0.post1=pypi_0
-smmap=5.0.0=pypi_0
-streamlit=1.17.0=pypi_0
-tenacity=8.1.0=pypi_0
-threadpoolctl=3.1.0=pypi_0
-tk=8.6.12=h27826a3_0
-toml=0.10.2=pypi_0
-toolz=0.12.0=pypi_0
-tornado=6.2=pypi_0
-tqdm=4.64.1=pypi_0
-typing-extensions=4.4.0=pypi_0
-tzdata=2022.7=pypi_0
-tzlocal=4.2=pypi_0
-urllib3=1.26.14=pypi_0
-validators=0.20.0=pypi_0
-watchdog=2.2.1=pypi_0
-werkzeug=2.2.2=pypi_0
-wheel=0.38.4=pyhd8ed1ab_0
-xgboost=1.6.0=pypi_0
-xlrd=2.0.1=pyhd8ed1ab_3
-xlwt=1.3.0=pypi_0
-xorg-kbproto=1.0.7=h7f98852_1002
-xorg-libice=1.0.10=h7f98852_0
-xorg-libsm=1.2.3=hd9c2040_1000
-xorg-libx11=1.7.2=h7f98852_0
-xorg-libxau=1.0.9=h7f98852_0
-xorg-libxdmcp=1.1.3=h7f98852_0
-xorg-libxext=1.3.4=h7f98852_1
-xorg-libxrender=0.9.10=h7f98852_1003
-xorg-renderproto=0.11.1=h7f98852_1002
-xorg-xextproto=7.3.0=h7f98852_1002
-xorg-xproto=7.0.31=h7f98852_1007
-xz=5.2.6=h166bdaf_0
-yarg=0.1.9=pypi_0
-zipp=3.12.0=pypi_0
-zlib=1.2.13=h166bdaf_4
+altair==4.2.2
+AmberLite==22.0
+AmberUtils==21.0
+ansi2html==1.8.0
+attrs==22.2.0
+biopython==1.80
+blinker==1.5
+cachetools==5.3.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
+colour==0.1.5
+contourpy==1.0.7
+cycler==0.11.0
+dash==2.13.0
+dash-bio==1.0.1
+dash-bootstrap-components==1.5.0
+dash-core-components==2.0.0
+dash-daq==0.5.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+decorator==5.1.1
+docopt==0.6.2
+entrypoints==0.4
+et-xmlfile==1.1.0
+Flask==2.2.2
+fonttools==4.38.0
+GEOparse==2.0.3
+gitdb==4.0.10
+GitPython==3.1.30
+gunicorn==21.2.0
+idna==3.4
+importlib-metadata==6.0.0
+importlib-resources==5.12.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+kiwisolver==1.4.4
+markdown-it-py==2.1.0
+MarkupSafe==2.1.2
+matplotlib==3.7.0
+mdurl==0.1.2
+MMPBSA.py==16.0
+nest-asyncio==1.5.8
+numpy==1.24.1
+openpyxl==3.1.2
+packaging==23.0
+packmol-memgen==1.2.3rc0
+pandas==1.5.3
+ParmEd==3.4.1
+pdb4amber==22.0
+periodictable==1.6.1
+Pillow==9.4.0
+pip==23.0
+pipreqs==0.4.13
+plotly==5.13.0
+protobuf==3.20.3
+pyarrow==11.0.0
+pydeck==0.8.0
+Pygments==2.14.0
+Pympler==1.0.1
+pyMSMT==22.0
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytraj==2.0.6
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+rdkit==2022.9.4
+requests==2.28.2
+retrying==1.3.4
+rich==13.3.1
+sander==22.0
+scikit-learn==1.2.1
+scipy==1.10.0
+semver==2.13.0
+setuptools==67.1.0
+six==1.16.0
+sklearn==0.0.post1
+smmap==5.0.0
+streamlit==1.17.0
+tenacity==8.1.0
+threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+tqdm==4.64.1
+typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
+urllib3==1.26.14
+validators==0.20.0
+watchdog==2.2.1
+Werkzeug==2.2.2
+wheel==0.38.4
+xgboost==1.6.0
+xlrd==2.0.1
+xlwt==1.3.0
+yarg==0.1.9
+zipp==3.12.0
