--- a/start.conf
+++ b/start.conf
@@ -1,7 +1,7 @@
 workers = 2
 threads = 2
 bind = '0.0.0.0'
-assesslog = './data/gunicorn_access.log'
+accesslog = './data/gunicorn_access.log'
 errorlog = './data/gunicorn_error.log'
 
 loglevel = 'warning'
